--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-native-router-flux": "^3.26.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-persist": "^3.1.1",
     "redux-thunk": "^2.1.0"
   }
 }
