--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lodash": "^4.13.1",
     "react": "^15.0.2",
     "react-native": "^0.26.2",
+    "react-native-action-button": "^1.1.5",
+    "react-native-button": "^1.6.0",
+    "react-native-drawer": "^2.2.3",
     "react-native-maps": "^0.4.2",
-    "react-native-router-flux": "^3.26.3",
+    "react-native-router-flux": "^3.26.16",
+    "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-actions": "^0.9.1",
     "redux-logger": "^2.6.1",
     "redux-persist": "^3.1.1",
+    "redux-promise-middleware": "^3.0.0",
     "redux-thunk": "^2.1.0"
   }
 }
