--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 
+
 import com.android.build.OutputFile
 
 /**
@@ -125,6 +126,9 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.google.android.gms:play-services-gcm:8.4.0' // <- Add this line
+    compile project(':RNGcmAndroid')                         // <- Add this line
+    compile project(':react-native-system-notification')     // <- Add this line
 }
 
 // Run this once to be able to run the application with BUCK
@@ -133,3 +137,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
   from configurations.compile
   into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'           // <- Add this line
