--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.GET_TASKS" />                       <!-- <- Add this line -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>           <!-- <- Add this line -->
+    <uses-permission android:name="android.permission.VIBRATE"/>                          <!-- <- Add this line -->
+
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.SEND" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+
+    <permission
+      android:name="com.gogreen.permission.C2D_MESSAGE"
+      android:protectionLevel="signature" />
+    <uses-permission android:name="com.gogreen.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -17,18 +34,56 @@
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
       <meta-data
+      android:name="com.google.android.gms.version"
+      android:value="@integer/google_play_services_version" />
+      <meta-data
      android:name="com.google.android.geo.API_KEY"
      android:value="AIzaSyBAefhRlXEH3vCko-zZTX6PHllTR6av4WI"/>
+     <receiver
+   android:name="com.google.android.gms.gcm.GcmReceiver"
+   android:exported="true"
+   android:permission="com.google.android.c2dm.permission.SEND" >
+   <intent-filter>
+     <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+     <category android:name="com.gogreen" />
+   </intent-filter>
+ </receiver>
+ <service android:name="com.oney.gcm.GcmRegistrationService"/>
+ <service android:name="com.oney.gcm.BackgroundService"></service>
+
+ <service
+   android:name="io.neson.react.notification.GCMNotificationListenerService"
+   android:exported="false" >
+   <intent-filter>
+     <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+   </intent-filter>
+ </service>
+ <receiver
+   android:exported="false"
+   android:name="com.oney.gcm.GcmBroadcastReceiver">
+   <intent-filter>
+     <action android:name="com.oney.gcm.GCMReceiveNotification" />
+     </intent-filter>
+ </receiver>
+
+ <receiver android:name="io.neson.react.notification.NotificationEventReceiver" />
+ <receiver android:name="io.neson.react.notification.NotificationPublisher" />
+ <receiver android:name="io.neson.react.notification.SystemBootEventReceiver">
+   <intent-filter>
+     <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+   </intent-filter>
+ </receiver>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-    </application>
+        </application>
 
 </manifest>
