--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-native-action-button": "^1.1.5",
     "react-native-button": "^1.6.0",
     "react-native-drawer": "^2.2.3",
+    "react-native-gcm-android": "^0.2.0",
     "react-native-maps": "^0.4.2",
     "react-native-router-flux": "^3.26.16",
+    "react-native-system-notification": "^0.1.11",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
