--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -10,3 +10,6 @@ include ':RNGcmAndroid', ':app'
 project(':RNGcmAndroid').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gcm-android/android')
 include ':react-native-system-notification'
 project(':react-native-system-notification').projectDir = new File(settingsDir, '../node_modules/react-native-system-notification/android')
+
+include ':RNDeviceInfo', ':app'
+project(':RNDeviceInfo').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-device-info/android')
