--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "^0.26.2",
     "react-native-action-button": "^1.1.5",
     "react-native-button": "^1.6.0",
+    "react-native-device-info": "^0.9.3",
     "react-native-drawer": "^2.2.3",
     "react-native-gcm-android": "^0.2.0",
     "react-native-maps": "^0.4.2",
